src/pages/options.css
/* ... */
@media (prefers-color-scheme: dark) {
    :root {
	--color-bkgd: #1a1a1e;
	--color-main-border: #2a2a2e;
	--color-main-border-shadow: #0c0c0d;
	--color-main-bkgd: #2a2a2e;
	--color-tab-cntr-border: #5b5b66;
	--color-tab-bkgd-hover: #52525e;
	--color-tab-bkgd-active: #5b5b66;
	--color-tab-bkgd-selected: #4a4a55;
	--color-tab-text-active: #45a1ff;
	--color-fieldset-border: #4a4a4f;
	--color-dlg-fieldset-border: #585858;
	--color-text-sync-status-on: #30e60b;
	--color-about-btn-bkgd: #2a2a2e;
	--color-about-btn-bkgd-hover: #38383d;
	--color-about-btn-bkgd-active: #4a4a4f;
	--color-about-btn-border: #4a4a4f;
	--color-about-btn-border-hover: #b1b1b3;
	--color-about-btn: #f9f9fa;
    }
}


body {
    background-color: var(--color-bkgd);
    font-size: 13px;
    color: var(--color-default-text);
}

#addon-icon {
    vertical-align: -14px;
    margin-right: 8px;
    width: 48px;
    height: 48px;
}

h2 {
    display: inline-block;
    margin-top: 0;
    margin-right: 6px;
    margin-bottom: 20px;
    font-size: 22px;
    font-weight: 600;
    letter-spacing: -0.2px;
}

main {
    width: 644px;
    margin: 24px auto 24px auto;
    padding: 16px;
    border: 1px solid var(--color-main-border);
    border-radius: 2px;
    box-shadow: 0 0 8px 2px var(--color-main-border-shadow);
    background-color: var(--color-main-bkgd);
}

input[type="number"],
select {
    font: caption;
    font-size: 13px;
}

input[type="number"] {
    height: 22px;
    border: 1px solid var(--color-tb-border);
    background-color: var(--color-tb-bkgd);
    color: var(--color-tb-text);
}

input[type="checkbox"] + label {
    margin-left: 1px;
    vertical-align: 0;
}

body[data-os="win"] input[type="checkbox"] + label {
    vertical-align: 2px;
}

body[data-os="linux"]:not([data-laf="true"]) input[type="checkbox"] + label {
    vertical-align: 3px;
}

select {
    margin-bottom: 0 !important;
    vertical-align: middle;
}

fieldset {
    padding-top: 4px;
    padding-bottom: 12px;
    border-top: 1px solid var(--color-fieldset-border);
    border-right: 0;
    border-bottom: 0;
    border-left: 0;
}

fieldset:last-of-type {
    padding-bottom: 8px;
}

legend {
    margin-left: -12px;
    padding-right: 4px;
    font-size: 15px;
}

label {
    margin-right: 4px;
}

input[type="checkbox"] ~ label,
input[type="radio"] ~ label {
    font-size: 15px;
}

button {
    min-width: 88px;
    height: 32px;
    padding: 0 12px 0;
    font: caption;
    font-size: 15px;
}

progress {
    width: 100%;
}

.row {
    margin-top: 4px;
    margin-bottom: 2px;
    margin-left: 4px;
}

.indent {
    margin-left: 2.2em;
}

description {
    margin-top: 6px;
    margin-right: 18px;
}

.description {
    font-size: 13px;
}

.example {
    font-size: 11.5px;
}

.tab-container {
    margin-top: 4px;
    margin-bottom: 16px;
    margin-left: -16px;
    margin-right: -16px;
    border-top: 1px solid var(--color-tab-cntr-border);
    border-bottom: 1px solid var(--color-tab-cntr-border);
    text-align: center;
}

.tab-container > .tab {
    display: inline-block;
}

.tab > button {
    margin: 0;
    padding-top: 40px;
    padding-bottom: 22px;
    padding-left: 16px;
    padding-right: 16px;

    border: unset;
    border-radius: 0;

    background-color: transparent;
    background-repeat: no-repeat;
    background-position: center 8px;

    font-size: 13px;
}

.tab > button:-moz-focusring {
    margin-top: -2px;
    margin-bottom: -2px;
    padding-left: 14px;
    padding-right: 14px;

    outline: none;
    border: 2px solid #45a1ff !important;
    box-shadow: none;
}

.tab > button:-moz-focusring:active {
    margin-top: -2px;
    margin-bottom: -2px;
    padding-left: 14px;
    padding-right: 14px;

    outline: none;
    border: 2px solid #45a1ff !important;
    box-shadow: none;

    background-color: var(--color-tab-bkgd-active);
}

.tab > button.active-tab {
    color: var(--color-tab-text-active);
    background-color: var(--color-tab-bkgd-selected);
}

.tab > button:hover {
    background-color: var(--color-tab-bkgd-hover);
}

.tab > button.active-tab:hover {
    background-color: var(--color-tab-bkgd-hover);
}

.tab > button:active {
    padding-top: 40px;
    border: none !important;
    background-color: var(--color-tab-bkgd-active);
    background-position: center 8px;
}

.tab > button.active-tab:active {
    background-color: var(--color-tab-bkgd-active);
}

.tab-panel {
    display: none;
}

.active-tab-panel {
    display: block;
}

#preftab-general-btn {
    background-image: url("../img/pref-general.svg");
}

#preftab-general-btn.active-tab {
    background-image: url("../img/pref-general-checked.svg");
}
#preftab-paste-btn {
    background-image: url("../img/pref-paste.svg");
}

#preftab-paste-btn.active-tab {
    background-image: url("../img/pref-paste-checked.svg");
}

#preftab-sync-clippings-btn {
    background-image: url("../img/pref-sync-clippings.svg");
}

#preftab-sync-clippings-btn.active-tab {
    background-image: url("../img/pref-sync-clippings-checked.svg");
}

#html-paste-options {
    font-size: 15px;
    margin-bottom: 8px;
}

#html-paste-options-ctr {
    margin-left: 10px;
}

#html-paste-note {
    margin: 0 18px 4px 4px;
    font-size: 13px;
}

#html-paste-note.disabled {
    color: #999;
    opacity: .5;
}

#paste-opt-raw-html-row {
    margin-top: 8px;
}

#paste-options {
    margin-top: 20px;
}

#enable-shortcut-key-ctr {
    margin-top: 12px;
    margin-bottom: 0;
}

#auto-inc-plchldr-opts {
    margin-top: 8px;
}

#auto-inc-plchldr-opts label {
    font-size: 15px;
}

#auto-inc-plchldrs-start-val {
    width: 64px;
    font-size: 15px;
}

#backup-reminder-freq {
    vertical-align: 0;
}

body[data-os="win"] #backup-reminder-freq {
    vertical-align: 1px;
}

body[data-os="linux"]:not([data-laf="true"]) #backup-reminder-freq {
    vertical-align: 3px;
}

#backup-reminder-freq + label {
    margin-left: 4px;
}

body[data-os="win"] #backup-reminder-freq + label {
    vertical-align: 2px;
}
/* ... */

